--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="gradient-bg">
         <div class="container">
-            <main class="hero-section">
+            <main class="hero-section" id="heroSection">
                 <div class="content-wrapper">
                     <h1>AI-Powered Medical History Collection</h1>
                     <p class="subtitle">Have a natural conversation with our AI assistant to share your medical history. No forms, just talk.</p>
@@ -47,6 +47,31 @@
                     </div>
                 </div>
             </main>
+
+            <!-- Chat Interface (initially hidden) -->
+            <div class="chat-interface hidden" id="chatInterface">
+                <div class="chat-container">
+                    <div class="voice-visualization">
+                        <div class="voice-indicator"></div>
+                    </div>
+                    <div class="controls">
+                        <button class="control-button mic-button" id="micButton">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path>
+                                <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
+                                <line x1="12" y1="19" x2="12" y2="23"></line>
+                                <line x1="8" y1="23" x2="16" y2="23"></line>
+                            </svg>
+                        </button>
+                        <button class="control-button end-button" id="endButton">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <line x1="18" y1="6" x2="6" y2="18"></line>
+                                <line x1="6" y1="6" x2="18" y2="18"></line>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
